--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <img src="OLC.webp" alt="TT Kgomokaboya Inc Attorneys Logo">
             <span>TT Kgomokaboya Inc Attorneys</span>
         </div>
-        <button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>
+        <button class="hamburger" id="hamburger"></button>
         <ul class="nav-menu" id="nav-menu">
             <li><a href="#services">Services</a></li>
             <li><a href="#about">About</a></li>
